--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <title>Dashboard Skills</title>
-    <base href="/" />
-
+    <base href="/angular-skills/">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-  </head>
+  <link rel="stylesheet" href="styles.21b980bdbe585b2531bb.css"></head>
   <body>
     <my-app></my-app>
-  </body>
+  <script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.7c58010efd0f1a86a1fc.js"></script><script type="text/javascript" src="main.9625ed029b6eec6e6cc3.js"></script></body>
 </html>
